# avatar_challenge_sub

./: README.md  package.xml  setup.cfg  setup.py
avatar_challenge/: shape_tracer_node.py
launch/: start.launch.py
shapes/: shapes.yaml  simple_xarm7_traj.yaml
